--- a/themes/woman/templates/index.html
+++ b/themes/woman/templates/index.html
@@ -90,6 +90,7 @@
                 </nav>
             </div>
         </header>
+        <div class="holder"></div>
         <main class="main">
             {% block content %}
             {% set banner_key = lang~"_banner" %}
