--- a/themes/woman/sass/site.scss
+++ b/themes/woman/sass/site.scss
@@ -835,6 +835,11 @@ footer {
         position:fixed;
     }
 
+    .holder{
+        width:100%;
+        height:64px;
+    }
+
 }
 
 @media screen and (max-width: 767px) {
